@@ -22,7 +22,7 @@ from xml.dom import minidom
 import _version  #--in the same directory - created by bzr
 
 #- updated 10th June 2013.
-__MAJOR_VERSION__= "0.4.04"
+__MAJOR_VERSION__= "0.4.05"
 
 
 if "-v" in sys.argv:
