@@ -1,3 +1,10 @@
+openmolar (0.4.04+bzr0831-0~__DIST__0) __DIST__; urgency=low
+
+  * upstream changes
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 10 Jun 2013 10:06:54 +0100
+
+
 openmolar (0.4.03+bzr0830-0~__DIST__0) __DIST__; urgency=low
 
   * upstream changes
